2001-03-20  Jason Merrill  <jason@redhat.com>

	* libsupc++/vec.cc (__cxa_vec_cleanup): New fn.
	(__cxa_vec_ctor, __cxa_vec_cctor, __cxa_vec_dtor): Call it.
	* libsupc++/cxxabi.h: Declare it.

2001-03-16  Alexandre Oliva  <aoliva@redhat.com>

	* src/gen-num-limits.cc (signal_adapter): Overloaded to match
	signal_func with an unspecified argument list.

2001-03-15  Benjamin Kosnik  <bkoz@redhat.com>

	* tests_flags.in (CXXFLAGS): Link libstdc++ before libsupc++.

2001-03-15  Gabriel Dos Reis  <gdr@merlin.codesourcery.com>

	* include/bits/basic_string.tcc (operator+): Fix thinko.

2001-03-14  Benjamin Kosnik  <bkoz@redhat.com>

	libstdc++/2020
	* include/bits/std_streambuf.h: Remove cached locale facets.
	(basic_streambuf::_M_buf_fctype): Remove.
	(basic_streambuf::~basic_streambuf): Remove here.
	(basic_streambuf::basic_streambuf): Same.
	(basic_streambuf::imbue): Same.
	* include/bits/fstream.tcc (filebuf::imbue): Remove _M_buf_fctype.
	* include/bits/std_fstream.h (basic_filebuf::_M_fcvt): Remove.
	(basic_filebuf::~basic_filebuf()): Remove here.
	* include/bits/fstream.tcc (basic_filebuf::basic_filebuf): Same.
	(basic_filebuf::imbue): Same.
	* include/bits/localefwd.h (_Count_ones): Remove.
	(locale::_S_num_categories): Just use 6, since this doesn't
	actually change, ever.
	* include/bits/locale_facets.tcc (has_facet): Simplify.
	(use_facet): Same.
	* testsuite/27_io/filebuf.cc (test06): Add tests.
	
2001-03-13  Steve Ellcey  <sje@cup.hp.com>

	* libstdc++-v3/config/os/hpux/bits/ctype_base.h: Make ctype masks
	match HP-UX ctype.h header file.

2001-03-13  Andris Pavenis <pavenis@latnet.lv>

        * config/djgpp/bits/ctype_noninline.h: Fix typo and remove
	duplicate definitions of __dj_ctype_*

2001-03-13  Benjamin Kosnik  <bkoz@redhat.com>

	* libsupc++/new: Remove pragma interface.
	* libsupc++/typeinfo: Same.
	* libsupc++/exception: Same.
	* libsupc++/new_handler.cc: Remove pragma implementation. 
	(bad_alloc::~bad_alloc()): Add.